# better_ssh

./: Cargo.toml  README.md  build.rs
lang/: CH_de.toml  CH_fr.toml  CH_it.toml  DE_de.toml  EN_en.default.toml  FR_fr.toml  IT_it.toml
src/: app.rs  assets.rs  history.rs  i18n.rs  logging.rs  main.rs
src/config/: mod.rs  profile.rs  vault.rs
src/network/: mod.rs  scanner.rs  telnet.rs
src/ssh/: key_auth.rs  mod.rs  session.rs  sftp.rs
src/ui/: file_explorer.rs  icons.rs  lang_window.rs  mod.rs  network_scan.rs  sidebar.rs  snippets.rs  system_monitor.rs  tab_bar.rs  terminal.rs
