[package]
name = "betterssh"
version = "1.0.0"
edition = "2021"
authors = ["rusty-suite"]
description = "A modern, secure SSH client with multi-tab sessions, network scanner, SFTP explorer and encrypted password vault"
license = "PolyForm-Noncommercial"
repository = "https://github.com/rusty-suite/better_ssh"
homepage = "https://github.com/rusty-suite/better_ssh"
documentation = "https://github.com/rusty-suite/better_ssh#readme"
readme = "README.md"
keywords = ["ssh", "terminal", "sftp", "network", "client"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "betterssh"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
egui_plot = "0.29"
egui-phosphor = { version = "0.7", features = ["regular"] }
tokio = { version = "1", features = ["full"] }
russh = "0.45"
russh-sftp = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
age = { version = "0.10" }
argon2 = "0.5"
chacha20poly1305 = "0.10"
shellexpand = "3"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rfd = "0.14"
dark-light = "1"
log = "0.4"
fern = "0.7"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = "1"
crossbeam-channel = "0.5"
image = { version = "0.25", features = ["png"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "BetterSSH"
identifier = "com.betterssh.app"
icon = ["assets/icon.ico", "assets/icon.png"]
version = "0.1.0"
short_description = "Modern SSH Client"
long_description = "A modern, secure SSH client built with Rust and egui — multi-tab sessions, network scanner, SFTP explorer and encrypted password vault"
copyright = "© 2025 rusty-suite — MIT License"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
